# pico-car-robotics

./: .gitignore  Cargo.toml  justfile  out.uf2  rust-toolchain.toml  shell.nix
.cargo/: config.toml
src/: controller.rs  display.rs  main.rs  motor.rs  wifi.rs
