[package]
name = "group0"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
] }
embassy-rp = { version = "0.9.0", features = [
  "rt",
  "critical-section-impl",
  "rp2040",
  "time-driver",
  "boot2-w25q080",
  "defmt",
] }
embassy-time = "0.5.0"

static_cell = "2.1.1"
portable-atomic = { version = "1.13", features = ["critical-section"] }
cyw43 = "0.6.0"
cyw43-pio = "0.9.0"

defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-graphics = "0.8.2"
display-interface = { version = "0.5.0", features = ["defmt-03"] }
oled_async = { git = "https://github.com/techmccat/sh1106.git", branch = "master" }
display-interface-i2c = "0.5.0"


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
